--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".MainActivity">
+    <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintVertical_bias="0.0">
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" android:padding="16dp">
+            <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="158dp"
+                    android:id="@+id/imagem" android:adjustViewBounds="false" android:scaleType="centerCrop"/>
+            <TextView
+                    android:text="Titulo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textTitulo" android:gravity="center"
+                    android:layout_marginTop="16dp" android:textStyle="bold"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
+            <TableLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:orientation="horizontal" android:stretchColumns="0,2"
+                    android:layout_marginTop="16dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+                <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
+                          android:gravity="center">
+                    <TextView
+                            android:text="TextView"
+                            android:layout_width="146dp"
+                            android:layout_height="wrap_content" android:id="@+id/autor" tools:text="Autor"
+                            android:textColor="@color/colorPrimary"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:gravity="center"/>
+                    <View
+                            android:layout_width="1dp"
+                            android:layout_height="match_parent" android:id="@+id/view"
+                            android:background="@android:color/darker_gray"/>
+                    <TextView
+                            android:text="TextView"
+                            android:layout_width="151dp"
+                            android:layout_height="wrap_content" android:id="@+id/data" tools:text="Data Pub"
+                            android:textColor="@color/colorPrimary"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:gravity="center"/>
+                </TableRow>
+            </TableLayout>
+            <Button
+                    android:text="VER MAIS"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/button" android:layout_marginTop="16dp"
+                    android:background="@color/colorAccent"/>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
